# Windows-Face-Hello

./: .gitignore  CLAUDE.md  DESIGN.md  DESIGN_zh.md  LICENSE  README.md  README_zh.md  SIGNING.md  THIRD_PARTY_LICENSES.md  contribute.md  contribute_zh.md  pyproject.toml  uninstall_cleanup.py  winservice_main.py
.github/workflows/: ci.yml  release.yml
app/: __init__.py  dialogs.py  main.py  theme.py  widgets.py  workers.py
app/assets/: README.md
cp/: CFaceCredential.cpp  CFaceCredential.h  CFaceProvider.cpp  CFaceProvider.h  CredVault.cpp  CredVault.h  FaceHelloCP.def  FaceHelloCP.sln  FaceHelloCP.vcxproj  KerbHelpers.cpp  KerbHelpers.h  PipeClient.cpp  PipeClient.h  README.md  README_zh.md  common.h  dll.cpp  guid.h  helpers.h
face_hello/: __init__.py  antispoof.py  auth.py  authenticode.py  camera.py  config.py  cred_vault.py  detector.py  diagnostics.py  enroll.py  i18n.py  liveness.py  matcher.py  platform_backend.py  probes.py  service.py  store.py  updater.py  version.py  win_service.py
installer/: FaceHello.iss
models/: antispoof.onnx
scripts/: _system_ping.cmd  _system_read.cmd  auth_client.py  build_release.py  cam_session0_probe.py  cred_vault_cli.py  doctor.py  generate_update_manifest.py  install_maintenance.py  liveness_tune.py  logon_probe.py  lsa_store.py  mock_service.py  offline_check.py  probe_locked.cmd  quantize_model.py  release_smoke.py  run_session0_probe.cmd  system_ping_test.ps1  system_read_test.ps1  verify_release_signature.py  whoami_probe.py
scripts/sign/: setup_selfsigned.ps1  sign_file.cmd
tests/: conftest.py  test_auth_recognize.py  test_authenticate_gating.py  test_camera_lock.py  test_diagnostics.py  test_doctor.py  test_enroll.py  test_enroll_guidance.py  test_i18n.py  test_install_maintenance.py  test_lockout.py  test_matcher.py  test_probes.py  test_store_persistence.py  test_store_templates.py  test_tracker_reuse.py  test_update_manifest.py  test_update_ui.py  test_update_workers.py  test_updater.py  test_verify_release_signature.py  test_version.py  test_window_sizing.py
