[project]
name = "face-hello"
version = "0.1.0"
description = "普通 RGB 摄像头人脸解锁 Windows 原型"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy<2.0",
    "opencv-python",
    "mediapipe",
    "insightface",
    "onnxruntime",
    "PySide6",
    "pywin32",
]

[tool.uv]
# 应用型项目,不把自身作为可安装包(根级 face_hello/ app/ 直接在 sys.path)
package = false
